--- a/package.json
+++ b/package.json
@@ -1,22 +1,50 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "repository": "https://github.com/Schmxdt/apollo-backend.git",
-  "author": "Schmxdt <airtonschmidt2018@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "reflect-metadata": "^0.2.2",
-    "tsyringe": "^4.10.0",
-    "typeorm": "^0.3.23"
+  "scripts": {
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/app.ts",
+    "start": "ts-node -r tsconfig-paths/register dist/shared/infra/http/app.js",
+    "typeorm": "typeorm",
+    "migration:generate": "typeorm migration:generate -n",
+    "migration:run": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run -d src/shared/infra/data-source.ts",
+    "migration:drop": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js schema:drop -d src/shared/infra/data-source.ts",
+    "migration:revert": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:revert"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.17",
-    "ts-node-dev": "^2.0.0",
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/node": "^7.13.13",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
+    "@babel/register": "^7.25.9",
+    "@types/express": "4.17.1",
+    "@types/node": "^22.14.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "babel-preset-env": "^1.7.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^4.2.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "mysql2": "^3.14.1",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.9.1",
+    "typeorm": "^0.3.22"
   }
 }
